# manifests

./: .gitignore  Cargo.toml  LICENSE  build.rs  readme.md
examples/: ravenfire-vendor.json
examples/games/: min.json
examples/games/simple_battle/: simple_battle.json
examples/games/spellbinder/: game.lock.toml  scenario.solo.toml
examples/games/tictactoe/: game.lock.toml
examples/peripherals/: min.json
examples/peripherals/rf.card_reader/: rf.card_reader-abbreviated.json  rf.card_reader.json  rf.card_reader.lock.json
examples/peripherals/rf.dice_pad/: rf.dice_pad.json  rf.dice_pad.lock.json  rf.dice_pad.lock.toml
examples/peripherals/rf.screen/: rf.screen.json  rf.screen.lock.json  rf.screen.lock.toml
examples/peripherals/watertribe.card_reader/: watertribe.card_reader-abbreviated.json  watertribe.card_reader.json  watertribe.card_reader.lock.toml
examples/peripherals/watertribe.xl_card_reader/: watertribe.xl_card_reader.json  watertribe.xl_card_reader.lock.json  watertribe.xl_card_reader.lock.toml
examples/specs/: min.json
examples/specs/card/: card.json  provider.json
game/: game.lock.toml  scenario.solo.toml
peripherals/: spellbinder.world_builder.toml  third-party.card_reader.toml
specs/peripherals/: rf.card_reader.toml  rf.multi_token_reader.toml  rf.screen.toml  rf.toggle_button.toml  spellbinder.worldbuilder.toml
src/: examples.rs  game.rs  generated_manifests.rs  lib.rs  main.rs  meta.rs  peripheral.rs  range.rs  specs.rs  vendor.rs
src/examples/: features.rs  games.rs  peripherals.rs  properties.rs  specs.rs  vendors.rs
(+4 files in other folders)
